Add Robot and e-mail publishers to verifications
 - add Robot and e-mail publishers to verification boilerplate
   template for review and merge verification JJB templates

Issue-ID: INT-1871
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: Icbd120cc828313c72f2013102867a2a9e5bd211b

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -228,7 +228,14 @@
       - integration-run-project-test
       - lf-provide-maven-settings-cleanup
     publishers:
+      - integration-robot:
+          unstable-if: 0.0
+          pass-if: 100.0
       - lf-infra-publish
+      - email:
+          recipients: '{recipients}'
+          notify-every-unstable-build: false
+          send-to-individuals: true
 
 - job-template:
     # Job template for unified review verification jobs in
