--- a/jjb/aai/aai-sparky-be.yaml
+++ b/jjb/aai/aai-sparky-be.yaml
@@ -9,8 +9,9 @@
     name: aai-sparky-be-master
     project-name: 'aai-sparky-be'
     jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-verify
+      - gerrit-maven-merge:
+          cron: '@daily'
       - gerrit-maven-stage:
           sign-artifacts: true
           build-node: centos7-builder-4c-4g
@@ -33,6 +34,8 @@
     archive-artifacts: ''
     mvn-version: 'mvn36'
     java-version: openjdk11
+    nexus-snapshot-repo: 'snapshots'
+    mvn-snapshot-id: 'ecomp-snapshots'
 
 - project:
     name: aai-sparky-be-sonar
