Add *proper* Robot publisher for verifications
   - follow-up to https://gerrit.onap.org/r/c/ci-management/+/118301
     as project-specific CSITs archive their results to different dir

Issue-ID: INT-1871
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I09164ff9c369af8375f1105f9efaed165875da31

--- a/jjb/integration/integration-templates-csit.yaml
+++ b/jjb/integration/integration-templates-csit.yaml
@@ -228,7 +228,7 @@
       - integration-run-project-test
       - lf-provide-maven-settings-cleanup
     publishers:
-      - integration-robot:
+      - integration-project-robot:
           unstable-if: 0.0
           pass-if: 100.0
       - lf-infra-publish
