[SDC] Use default publisher for CSIT jobs
SDC does not need to publish robot tests as tests are run with a different framework

Issue-ID: SDC-3465
Signed-off-by: ChrisC <christophe.closset@intl.att.com>
Change-Id: I84a62d66a4aea8f0854e1202984a689bb3f5c58f

--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -23,6 +23,8 @@
                     /tmp/sdc-integration-tests/SDC/ONBOARDING-BE/*.log
                     /tmp/sdc-integration-tests/SDC/SDC-BE/*.log
                     /tmp/sdc-integration-tests/SDC/SDC-FE/*.log
+                publishers:
+                    -  lf-infra-publish
           - '{project-name}-merge-verification-maven-{stream}':
                 build-node: ubuntu1804-docker-8c-16g
                 container-public-registry: 'nexus3.onap.org:10001'
@@ -30,6 +32,8 @@
                 mvn-goals: clean install
                 mvn-params: '-Dnpm.registry=https://nexus3.onap.org/repository/npm.public/ -Ddocker.skip.push=true -P docker,all-for-integration-tests-only'
                 maven-versions-plugin: true
+                publishers:
+                    - lf-infra-publish
 
       project-name: 'sdc'
       recipients: 'christophe.closset@intl.att.com'
