--- a/jjb/dmaap/dmaap-buscontroller-csit.yaml
+++ b/jjb/dmaap/dmaap-buscontroller-csit.yaml
@@ -5,6 +5,7 @@
       - '{project-name}-{stream}-csit-{functionality}'
       - '{project-name}-{stream}-verify-csit-{functionality}'
     project-name: 'dmaap-buscontroller'
+    recipients: 'fiachra.corcoran@est.tech'
     stream: 'master'
     disabled: false
     functionality:
