Update DMaaP CSIT mail recipient, add verify job
 - add or change CSIT job notification recipient to Fiachra Corcoran
 - add verify job for DMaaP DataRouter CSIT

Issue-ID: DMAAP-1562, DMAAP-1551
Signed-off-by: Lasse Kaihlavirta <l.kaihlavirt@partner.samsung.com>
Change-Id: I1b5c5cfcbaa3b55babf6479b9ddeaa335518ef02

--- a/jjb/dmaap/dmaap-datarouter-csit.yaml
+++ b/jjb/dmaap/dmaap-datarouter-csit.yaml
@@ -3,7 +3,9 @@
     name: dmaap-datarouter-csit-ssl
     jobs:
       - '{project-name}-{stream}-csit-{functionality}'
+      - '{project-name}-{stream}-verify-csit-{functionality}'        
     project-name: 'dmaap-datarouter'
+    recipients: 'fiachra.corcoran@est.tech'
     stream:
       - 'master':
           branch: 'master'
