[CPS] Switch cps-tbdmt verify to older one
Issue-ID: CPS-243
Signed-off-by: Claudio David Gasparini <claudio.gasparini@pantheon.tech>
Signed-off-by: krishnaa96 <krishna.moorthy6@wipro.com>
Change-Id: I1eefa44274081ebe5df971692c4a77e94f69a32e

--- a/jjb/cps/cps-cps-tbdmt.yaml
+++ b/jjb/cps/cps-cps-tbdmt.yaml
@@ -38,6 +38,7 @@
       nexus-snapshot-repo: 'snapshots'
       jobs:
           - gerrit-maven-verify
+                mvn-goals: 'clean install'
           - gerrit-maven-merge
           - gerrit-maven-stage:
                 sign-artifacts: true
