Switch verify to older one
Issue-ID: CPS-243
Signed-off-by: krishnaa96 <krishna.moorthy6@wipro.com>
Change-Id: I1eefa44274081ebe5df971692c4a77e94f69a32e

--- a/jjb/cps/cps-cps-tbdmt.yaml
+++ b/jjb/cps/cps-cps-tbdmt.yaml
@@ -37,7 +37,7 @@
       mvn-snapshot-id: 'ecomp-snapshots'
       nexus-snapshot-repo: 'snapshots'
       jobs:
-          - gerrit-maven-verify
+          - '{project-name}-{stream}-verify-java'
           - gerrit-maven-merge
           - gerrit-maven-stage:
                 sign-artifacts: true
