Add release jobs for SNMPtrap
Change-Id: I227b2f8f330cc1e55deb037584b2932a35e380e7
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2653

--- a/jjb/dcaegen2/dcaegen2-collectors-snmptrap.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-snmptrap.yaml
@@ -16,6 +16,8 @@
     jobs:
       - '{project-name}-python-jobs'
       - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-gerrit-release-jobs':
+          build-node: centos7-docker-8c-8g
     archive-artifacts: ''
     container-tag-method: latest
     nexus-iq-namespace: 'onap-'
