[CPS] Add jobs for honolulu branch
Issue-ID: CPS-260
Change-Id: I050a6d6c29076def2d6ffb6dc9a24cbdb371515e
Signed-off-by: Bruno Sakoto <bruno.sakoto@bell.ca>

--- a/jjb/cps/cps.yaml
+++ b/jjb/cps/cps.yaml
@@ -54,6 +54,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+            branch: 'honolulu'
     mvn-settings: 'cps-settings'
     files: '**'
     archive-artifacts: ''
