Setup Python linter for integration-5G-core-nf-simulator project
Change-Id: I07ab336848fcef897d8246ce781308392ba161fc
Issue-ID: INT-1699
Signed-off-by: Bartek Grzybowski <b.grzybowski@partner.samsung.com>

--- a/jjb/integration/simulators/integration-5G-core-nf-simulator.yaml
+++ b/jjb/integration/simulators/integration-5G-core-nf-simulator.yaml
@@ -32,6 +32,10 @@
           tox-dir: '.'
           tox-envs: 'md'
           pattern: '**/*.md'
+      - 'python':
+          tox-dir: '.'
+          tox-envs: 'py'
+          pattern: '**/*.py'
     stream:
       - 'master':
           branch: 'master'
