Add honolulu release jobs
Add honolulu release branch jobs for CCSDK and SDNC

Change-Id: I070da276a4fc08ccab6cbfdba56c1087bf2b13ae
Issue-ID: CCSDK-3190
Issue-ID: SDNC-1495
Signed-off-by: Dan Timoney <dtimoney@att.com>

--- a/jjb/ccsdk/apps.yaml
+++ b/jjb/ccsdk/apps.yaml
@@ -32,6 +32,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-apps-settings'
@@ -78,6 +80,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-apps-settings'
