--- a/jjb/ccsdk/dashboard.yaml
+++ b/jjb/ccsdk/dashboard.yaml
@@ -23,6 +23,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-dashboard-settings'
@@ -67,6 +69,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-dashboard-settings'
