--- a/jjb/ccsdk/features.yaml
+++ b/jjb/ccsdk/features.yaml
@@ -19,6 +19,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-features-settings'
@@ -66,6 +68,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-features-settings'
