--- a/jjb/ccsdk/parent.yaml
+++ b/jjb/ccsdk/parent.yaml
@@ -21,6 +21,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: 'mvn36'
     mvn-settings: 'ccsdk-parent-settings'
