--- a/jjb/sdnc/sdnc-northbound.yaml
+++ b/jjb/sdnc/sdnc-northbound.yaml
@@ -19,6 +19,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-version: "mvn36"
     mvn-settings: 'sdnc-northbound-settings'
