[DCAE] Add honolulu jobs
Add CI jobs for Honolulu branch
Remove tox-env setting from CI job to enforce local tox.ini usage

Change-Id: Ia1edd58baa94def3cef72507e49284c64ed7fc8b
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2653

--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -8,6 +8,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     # apply to all jobs
     java-version: openjdk11
     project: 'dcaegen2/collectors/hv-ves'
