--- a/jjb/dcaegen2/dcaegen2-platform-docker-python-subprojects.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-docker-python-subprojects.yaml
@@ -100,6 +100,9 @@
           branch: master
       - guilin:
           branch: guilin
+      - honolulu:
+          branch: honolulu
+
     views:
       - project-view:
           project-name: dcaegen2-platform-adapter
