--- a/jjb/dcaegen2/dcaegen2-services-docker-python-subprojects.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-docker-python-subprojects.yaml
@@ -93,6 +93,8 @@
           branch: master
       - guilin:
           branch: guilin
+      - honolulu:
+          branch: honolulu
     views:
       - project-view:
           project-name: dcaegen2-services-pmsh
