--- a/jjb/dcaegen2/dcaegen2-services-kpi-computation-ms.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-kpi-computation-ms.yaml
@@ -13,6 +13,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-settings: 'dcaegen2-services-settings'
     files: '**'
