--- a/jjb/dcaegen2/dcaegen2-services-pm-mapper.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-pm-mapper.yaml
@@ -8,6 +8,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     # apply to all jobs
     project: 'dcaegen2/services/pm-mapper'
