--- a/jjb/dcaegen2/dcaegen2-services-prh.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-prh.yaml
@@ -22,6 +22,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-settings: 'dcaegen2-services-prh-settings'
     files: '**'
