--- a/jjb/dcaegen2/dcaegen2-services-sdk.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-sdk.yaml
@@ -18,6 +18,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-settings: 'dcaegen2-services-sdk-settings'
     files: '**'
