--- a/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
+++ b/jjb/dcaegen2/dcaegen2-analytics-tca-gen2.yaml
@@ -8,6 +8,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     # apply to all jobs
     project: 'dcaegen2/analytics/tca-gen2'
