--- a/jjb/dcaegen2/dcaegen2-collectors-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-ves.yaml
@@ -24,6 +24,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'dcaegen2-collectors-ves-settings'
     # due to a strange macro / variable translation problem this needs
     # to be passed as a string block to properly get the properties
