--- a/jjb/dcaegen2/dcaegen2-deployments.yaml
+++ b/jjb/dcaegen2/dcaegen2-deployments.yaml
@@ -14,6 +14,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honololu'
     mvn-settings: 'dcaegen2-deployments-settings'
     # due to a strange macro / variable translation problem this needs
     # to be passed as a string block to properly get the properties
