--- a/jjb/dcaegen2/dcaegen2-platform-mod-genprocessor.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-mod-genprocessor.yaml
@@ -17,6 +17,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: dcaegen2-platform-settings
     files: '**'
     archive-artifacts: ''
