--- a/jjb/dcaegen2/dcaegen2-platform-mod2-assembly.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-mod2-assembly.yaml
@@ -16,6 +16,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     mvn-settings: dcaegen2-platform-settings
     maven-version: 'mvn35'
     maven-deploy-properties: |
