--- a/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
+++ b/jjb/dcaegen2/dcaegen2-platform-policy-handler.yaml
@@ -5,12 +5,13 @@
     project: 'dcaegen2/platform/policy-handler'
     python-version: python3
     tox-dir: '.'
-    tox-envs: 'py3'
     stream:
       - 'master':
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     build-node: ubuntu1804-docker-8c-8g
     mvn-settings: 'dcaegen2-platform-policy-handler-settings'
     jobs:
