--- a/jjb/dcaegen2/dcaegen2-services-bbs-eventprocessor-java.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-bbs-eventprocessor-java.yaml
@@ -16,6 +16,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-settings: 'dcaegen2-services-settings'
     maven-version: 'mvn35'
