--- a/jjb/dcaegen2/dcaegen2-services-heartbeat.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-heartbeat.yaml
@@ -15,6 +15,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'dcaegen2-services-heartbeat-settings'
     # due to a strange macro / variable translation problem this needs
     # to be passed as a string block to properly get the properties
