--- a/jjb/dcaegen2/dcaegen2-services-mapper.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-mapper.yaml
@@ -24,6 +24,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'dcaegen2-services-mapper-settings'
     files: '**'
     archive-artifacts: ''
