--- a/jjb/dcaegen2/dcaegen2-services-slice-analysis-ms.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-slice-analysis-ms.yaml
@@ -15,6 +15,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     java-version: openjdk11
     mvn-settings: 'dcaegen2-services-settings'
     files: '**'
