Fix typo on deployment job
Change-Id: Ic12b4d4422ae01009db4448d358256821149ba3a
Signed-off-by: vv770d <vv770d@att.com>
Issue-ID: DCAEGEN2-2653

--- a/jjb/dcaegen2/dcaegen2-deployments.yaml
+++ b/jjb/dcaegen2/dcaegen2-deployments.yaml
@@ -15,7 +15,7 @@
       - 'guilin':
           branch: 'guilin'
       - 'honolulu':
-          branch: 'honololu'
+          branch: 'honolulu'
     mvn-settings: 'dcaegen2-deployments-settings'
     # due to a strange macro / variable translation problem this needs
     # to be passed as a string block to properly get the properties
