Add jenkins jobs for honolulu branch
Issue-ID: POLICY-3105
Change-Id: Ida86181e70132e14c1caab58b2dcd3e10a647c12
Signed-off-by: Jim Hahn <jrh3@att.com>

--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -35,6 +35,8 @@
           branch: 'frankfurt'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'policy-apex-pdp-settings'
     java-version: openjdk11
     files: '**'
