--- a/jjb/policy/policy-clamp.yaml
+++ b/jjb/policy/policy-clamp.yaml
@@ -27,6 +27,8 @@
     stream:
         - 'master':
               branch: 'master'
+        - 'honolulu':
+              branch: 'honolulu'
         - 'tosca-poc':
               branch: 'tosca-poc'
     mvn-settings: 'policy-clamp-settings'
