--- a/jjb/policy/policy-docker-base-common.yaml
+++ b/jjb/policy/policy-docker-base-common.yaml
@@ -24,6 +24,8 @@
           branch: 'master'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'policy-docker-settings'
     files: '**'
     archive-artifacts: ''
