--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -20,6 +20,8 @@
           branch: 'frankfurt'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'policy-common-settings'
     java-version: openjdk11
     files: '**'
