--- a/jjb/policy/policy-drools-pdp.yaml
+++ b/jjb/policy/policy-drools-pdp.yaml
@@ -29,6 +29,8 @@
           branch: 'frankfurt'
       - 'guilin':
           branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'policy-drools-pdp-settings'
     java-version: openjdk11
     files: '**'
