[DMAAP] Refactor dmaap jobs
Added H jobs to relevant templates
Changed some of the trigger jobs to trigger on docker-stage
Merged some MR jobs in the relevant template
Removed java verify for zookeeper

Change-Id: Iace56a99d5df21425f8b00e491bac8e790e340c0
Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Issue-ID: DMAAP-1570

--- a/jjb/dmaap/dmaap-buscontroller-csit.yaml
+++ b/jjb/dmaap/dmaap-buscontroller-csit.yaml
@@ -6,17 +6,17 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
     project-name: 'dmaap-buscontroller'
     recipients: 'fiachra.corcoran@est.tech'
-    stream: 'master'
-    disabled: false
+    stream:
+      - 'master':
+          branch: 'master'
     functionality:
       - 'ssl':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+            - '{project-name}-maven-docker-stage-{stream}'
       - 'with_mr':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+            - '{project-name}-maven-docker-stage-{stream}'
       - 'with_dr':
           trigger_jobs:
-            - '{project-name}-{stream}-release-java-daily-checkstyle'
+            - '{project-name}-maven-docker-stage-{stream}'
     robot-options: ''
-    branch: 'master'
