--- a/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
@@ -15,6 +15,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+          branch: 'honolulu'
       - 'guilin':
           branch: 'guilin'
     mvn-settings: 'dmaap-messagerouter-dmaapclient-settings'
