--- a/jjb/dmaap/dmaap-messagerouter-kafka.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-kafka.yaml
@@ -5,13 +5,25 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - gerrit-maven-docker-stage:
+          build-node: ubuntu1804-docker-8c-8g
+          maven-versions-plugin: true
+          mvn-params: '-P docker -Dmaven.test.skip=true'
+          container-public-registry: 'nexus3.onap.org:10001'
+          container-staging-registry: 'nexus3.onap.org:10003'
+      - '{project-name}-gerrit-release-jobs':
+          build-node: centos7-docker-8c-8g
     project: 'dmaap/kafka11aaf'
     stream:
       - 'master':
           branch: 'master'
+      - 'honolulu':
+          branch: 'honolulu'
       - 'guilin':
           branch: 'guilin'
     mvn-settings: 'dmaap-kafka11aaf-settings'
+    files: '**'
+    archive-artifacts: ''
 
 - project:
     name: dmaap-kafka-sonar
