--- a/jjb/dmaap/dmaap-datarouter.yaml
+++ b/jjb/dmaap/dmaap-datarouter.yaml
@@ -1,3 +1,4 @@
+---
 - project:
     name: dmaap-datarouter-java11
     project-name: 'dmaap-datarouter'
@@ -6,6 +7,7 @@
       - '{project-name}-{stream}-merge-java'
       - gerrit-maven-docker-stage:
           build-node: ubuntu1804-docker-8c-8g
+          maven-versions-plugin: true
           mvn-goals: 'clean package -P docker docker:build docker:push'
           container-public-registry: 'nexus3.onap.org:10001'
           container-staging-registry: 'nexus3.onap.org:10003'
@@ -15,8 +17,8 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'guilin':
-          branch: 'guilin'
+      - 'honolulu':
+          branch: 'honolulu'
     mvn-settings: 'dmaap-datarouter-settings'
     files: '**'
     archive-artifacts: ''
