[SO] update the honolulu jenkins to the SO-core
Issue-ID: SO-3566

Signed-off-by: seshukm <seshu.kumar.m@huawei.com>
Change-Id: I874efa0fd62363e9c551ab54869142752c4442a1

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -32,8 +32,8 @@
       - 'guilin':
           branch: 'guilin'
           java-version: openjdk11
-      - 'dynamicBPMN':
-          branch: 'Dynamic_BPMN'
+      - 'honolulu':
+          branch: 'honolulu'
           java-version: openjdk11
     mvn-settings: 'so-settings'
     files: '**'
@@ -113,3 +113,4 @@
     project: so
     branch: master
     branch: guilin
+    branch: honolulu    
