--- a/jjb/so/so-adapters-so-etsi-sol005-adapter.yaml
+++ b/jjb/so/so-adapters-so-etsi-sol005-adapter.yaml
@@ -36,6 +36,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     mvn-settings: 'so-adapters-so-etsi-sol005-adapter-settings'
     files: '**'
     archive-artifacts: ''
