--- a/jjb/so/so-csit.yaml
+++ b/jjb/so/so-csit.yaml
@@ -14,6 +14,9 @@
       - 'guilin':
           branch: 'guilin'
           java-version: openjdk11
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     functionality:
       - 'integration-testing':
           trigger_jobs:
