--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -19,6 +19,9 @@
       - 'guilin':
           branch: 'guilin'
           java-version: openjdk11
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     mvn-settings: 'so-libs-settings'
     # due to a strange macro / variable translation problem this needs to be
     # passed as a string block to properly get the properties correctly defined
