add the job for the so-etsi-nfvo on the separate honolulu branch
Issue-ID: SO-3566

Signed-off-by: seshukm <seshu.kumar.m@huawei.com>
Change-Id: I67b1abd650dad74191b367a09df84a3348e22e8b

--- a/jjb/so/so-so-etsi-nfvo.yaml
+++ b/jjb/so/so-so-etsi-nfvo.yaml
@@ -36,6 +36,9 @@
       - 'master':
           branch: 'master'
           java-version: openjdk11
+      - 'honolulu':
+          branch: 'honolulu'
+          java-version: openjdk11
     mvn-settings: 'so-so-etsi-nfvo-settings'
     files: '**'
     archive-artifacts: ''
